# easy-sell-bot

./: README.md  pyproject.toml
src/: main.py
src/application/common/: application_handler.py
src/application/product/: add_product.py
src/core/: bot.py  config.py
src/filters/: admin_filter.py
src/handlers/: register_handlers.py
src/handlers/common/: base_handler.py
src/handlers/contracts/: product_service_interface.py  user_service_interface.py
src/handlers/product/: add_product.py
src/handlers/users/: create_user_handler.py  user_handler.py
src/middlewares/: register_middlewares.py
src/middlewares/antiflood/: antiflood_middleware.py
src/models/: product_model.py  user_model.py
src/services/: user_service.py
src/ui/: create_buttons.py  create_markdown.py
